<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_beranda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_singkat"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:fontFamily="@font/poppins_medium"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pendaftaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/blue"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/tv_pendaftaran_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="start"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_daftar" />

            <TextView
                android:id="@+id/tv_pendaftaran_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_pendaftaran_title"
                android:text="@string/desc_daftar" />

            <ImageView
                android:id="@+id/img_pendaftaran"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/pendaftaran"
                android:src="@drawable/daftar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/blue"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="start"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_faq" />

            <TextView
                android:id="@+id/tv_status_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_title"
                android:text="@string/desc_faq" />

            <ImageView
                android:id="@+id/img_status"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/faq"
                android:contentDescription="@string/status" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hubungi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        android:backgroundTint="@color/blue"

        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/tv_hubungi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="start"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_hubungi" />

            <TextView
                android:id="@+id/tv_hubungi_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_hubungi_title"
                android:text="@string/desc_hubungi" />

            <ImageView
                android:id="@+id/img_hubungi"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/hubungi"
                android:contentDescription="@string/hubungi" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>