<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".beranda.hubungi.HubungiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center|bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:src="@drawable/hubungi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingBottom="10dp"
            android:text="@string/hubungi_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingBottom="20dp"
            android:text="Kunjungi kantor kami yang berada di jalan\nPacific Century Place Tower Level 45\nSCBD Senayan, Kebayoran Baru"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingBottom="20dp"
            android:text="@string/atau"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:text="@string/email_singkat" />

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_call_24"
            android:text="@string/call" />


    </LinearLayout>







</LinearLayout>