<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ajukan.VerifyAuthActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:layout_weight="1">
        <ImageView
            android:layout_width="225dp"
            android:layout_height="300dp"
            android:src="@drawable/verify_auth"
            android:contentDescription="@string/phone_auth_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingBottom="20dp"
            android:text="@string/verify_otp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.chaos.view.PinView
            android:id="@+id/id_otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/white"
            android:textColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemRadius="5dp"
            app:lineColor="@color/blue" />

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/konfirmasi"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>