<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/content_status"
        android:visibility="invisible"
        app:layout_anchorGravity="center_horizontal|center_vertical" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">


        <EditText
            android:id="@+id/etNik"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/background_border"
            android:hint="Cari NIK"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/readnikBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal_200"
            android:text="Cari"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNik"/>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pendaftaran"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:cardUseCompatPadding="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_id_ktp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:ellipsize="start"
                    android:gravity="start"
                    android:maxLines="2"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nomor_ktp" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="start"
                    android:gravity="start"
                    android:maxLines="2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/img_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_id_ktp"
                    android:text="@string/pemohon_title" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="start"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    app:layout_constraintRight_toLeftOf="@id/img_poster"
                    android:text="@string/pemohon_name" />

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="110dp"
                    android:layout_height="90dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/icon_beranda"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/diperiksa" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView> />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>